# django-backend-boilerplate

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  GETTING_STARTED.md  README.md  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.claude/: README.md
.claude/commands/: deploy-check.md  performance-audit.md  refactor.md
.github/workflows/: ci.yml
apps/api/: __init__.py  apps.py  serializers.py  services.py  urls.py  views.py
apps/core/: __init__.py  consumers.py  exceptions.py  filters.py  logging.py  middleware.py  models.py  pagination.py  permissions.py  tasks.py  urls.py  views.py
apps/users/: __init__.py  admin.py  apps.py  models.py  urls.py
apps/users/migrations/: 0001_initial.py
config/: asgi.py  celery.py  urls.py  wsgi.py
config/settings/: __init__.py  base.py  dev.py  prod.py  test.py
nginx/: prod.conf
temporal_app/: __init__.py  activities.py  run_temporal_worker.py  workflows.py
tests/: conftest.py  factories.py  test_api.py  test_core.py  test_users.py
