[project]
name = "my-api-project"
version = "0.1.0"
description = "A production-ready Django API with Celery, Temporal, and WebSockets"
authors = [
    {name = "Developer", email = "dev@example.com"}
]
requires-python = ">=3.12"
dependencies = [
    "Django>=6.0,<6.1",
    "django-allauth[socialaccount]>=65.0,<66.0",
    "djangorestframework>=3.15.0,<4.0",
    "drf-spectacular>=0.27.0,<0.28",
    "django-cors-headers>=4.4.0,<5.0",
    "django-filter>=24.0,<26.0",
    "celery>=5.4.0,<6.0",
    "redis>=5.2.0,<6.0",
    "channels[daphne]>=4.2.0,<5.0",
    "channels-redis>=4.2.0,<5.0",
    "psycopg[binary]>=3.2.0,<4.0",
    "python-json-logger>=2.0.7,<3.0",
    "sentry-sdk>=2.0.0,<3.0",
    "temporalio>=1.7.0,<2.0",
    "gunicorn>=23.0.0,<24.0",
    "django-redis>=5.4.0,<6.0",
    "django-prometheus>=2.3.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0",
    "pytest-django>=4.10.0,<5.0",
    "pytest-cov>=6.0.0,<7.0",
    "factory-boy>=3.3.0,<4.0",
    "ruff>=0.8.0,<1.0",
    "mypy>=1.15.0,<2.0",
    "django-stubs>=5.0.0,<6.0",
    "djangorestframework-stubs>=3.15.0,<4.0",
    "pre-commit>=4.0.0,<5.0",
    "flower>=2.0.1,<3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps", "config", "temporal_app"]

[tool.uv]
dev-dependencies = []

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]
strict = true
packages = ["apps", "config", "temporal_app"]
exclude = ["migrations"]

[[tool.mypy.overrides]]
module = [
    "channels.*",
    "allauth.*",
    "corsheaders.*",
    "drf_spectacular.*",
    "sentry_sdk.*",
    "celery.*",
    "redis.*",
]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "config.settings.test"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py"]
testpaths = ["tests"]

[tool.pylint.main]
load-plugins = ["pylint_django"]
django-settings-module = "config.settings.dev"
ignore-paths = ["^.*/migrations/.*$"]

[tool.pylint.format]
max-line-length = 100

